# rust-sudoku

./: .gitignore  Cargo.toml  README.md
data/: sudoku.txt  sudoku_easy.txt  sudoku_evil.txt  sudoku_extra_newlines.txt  sudoku_extra_spaces.txt  sudoku_hard.txt  sudoku_hardest.txt  sudoku_invalid_character.txt  sudoku_medium.txt  sudoku_missing_character.txt  sudoku_no_spaces.txt  sudoku_too_long.txt  sudoku_too_wide.txt
src/: main.rs
src/lib/: basic_example.rs  exact_cover.rs  mod.rs  nqueens.rs  sudoku.rs  test_utils.rs
