[package]
name = "rust-algorithm-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.0", features = [] }
log = "0.4.20"
pretty_assertions = { version = "1.4.0", features = [] }
priority-queue = "1.3.2"

[dev-dependencies]
rstest = { version = "0.18.2", features = [] }
